[tool.poetry]
name = "nonebot-plugin-wuthering-waves"
version = "0.0.1"
description = "鸣潮Bot"
authors = ["ymdx <2660927163@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.test.dependencies]
ruff = "^0.4.5"
isort = "^5.10.1"
nonebug = "^0.3.5"
pytest-cov = "^4.0.0"
pre-commit = "^3.7.0"
pytest-asyncio = "^0.23.0"
nonebot2 = { version = "^2.2.0", extras = ["fastapi"] }

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 88
target-version = "py310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
